--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==2.2.2
+absl-py==2.2.2
 altair==5.5.0
 astunparse==1.6.3
 attrs==25.3.0
@@ -19,15 +19,15 @@ idna==3.10
 Jinja2==3.1.6
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-keras==3.8.0
+keras==3.9.2
 libclang==18.1.1
 Markdown==3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-ml-dtypes>=0.4.0,<0.5.0
+ml_dtypes==0.5.1
 namex==0.0.8
-narwhals==1.34.1
+narwhals==1.35.0
 numpy==2.1.3
 opt_einsum==3.4.0
 optree==0.15.0
@@ -48,9 +48,9 @@ six==1.17.0
 smmap==5.0.2
 streamlit==1.44.1
 tenacity==9.1.2
-tensorboard==2.18.0
+tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.18.0
+tensorflow==2.19.0
 tensorflow-io-gcs-filesystem==0.31.0
 termcolor==3.0.1
 toml==0.10.2
